# pisc-dotarrow

./: LICENSE  README.md  build.sbt  main.scala.in  pi.scala  pi_.scala
dotarrow/: source.scala
dotarrow/aeson/: aeson.cabal  json.in  stack.yaml
dotarrow/aeson/app/: Main.hs.in
dotarrow/aeson2/: LICENSE
dotarrow/aeson2/app/: Main.hs.in
dotarrow/circe/: app.scala.in  app2.scala.in
dotarrow/codec/idem/aeson/app/: Main.hs.in
dotarrow/codec/idem/aeson2/: aeson2.cabal
dotarrow/codec/idem/circe/: app.scala.in  app2.scala.in
dotarrow/codec/list/aeson/: aeson.cabal
dotarrow/codec/list/aeson/app/: Main.hs.in
dotarrow/codec/list/aeson2/app/: Main.hs.in
dotarrow/codec/list/circe/: app.scala.in  app2.scala.in
dotarrow/hs2sc/: hs2sc.cabal  stack.yaml
dotarrow/hs2sc/app/: Expr.hs  Main.hs  RunQ.hs  Stat.hs  Term.hs
dotarrow/hs2sc/prj/: prj.cabal
dotarrow/hs2sc/prj/app/: Main.hs.in
dotarrow/sc2hs/: sc2hs.cabal
dotarrow/sc2hs/app/: Main.hs.in
dotarrow/sc2hs/prj/: prj.cabal
dotarrow/sc2hs/prj/app/: Out_gUgVwYdD8r.hs
dotarrow/stream/: app.scala.in  app2.scala.in
examples/: .scalafmt.conf  dotarrow_aeson_ex0.scala  dotarrow_circe_aeson_ex0.scala  dotarrow_circe_ex0.scala  dotarrow_codec_idem_aeson_ex0.scala  dotarrow_codec_idem_circe_ex0.scala  dotarrow_codec_list_aeson_ex0.scala  dotarrow_codec_list_circe_ex0.scala  dotarrow_stream_circe_ex_3_4.scala  dotarrow_stream_ex0.scala  dotarrow_stream_ex1.scala  dotarrow_stream_ex2.scala  dotarrow_stream_ex_1_2.scala
examples/dotarrow/: ex1.scala  ex10.scala  ex11.scala  ex12.scala  ex13.scala  ex2.scala  ex3.scala  ex4.scala  ex5.scala  ex6.scala  ex7.scala  ex8.scala  ex9.scala
examples/dotarrow/ex1/: ex1.cabal
examples/dotarrow/ex1/app/: Inp_gUgVwYdD8r.hs  Main.hs  Out_gUgVwYdD8r.hs
examples/dotarrow/ex2/: ex2.cabal
examples/dotarrow/ex2/app/: Main.hs
examples/dotarrow/ex3/: ex3.cabal  stack.yaml
examples/dotarrow/ex3/app/: Main.hs
examples/dotarrow/ex4/: ex4.cabal
examples/dotarrow/ex4/app/: Main.hs
examples/dotarrow/ex5/: ex5.cabal
examples/dotarrow/ex5/app/: Fun.hs  Main.hs  Out_gUgVwYdD8r.hs
examples/pisc/: dotarrow_aeson_ex0.pisc  dotarrow_circe_aeson_ex0.pisc  dotarrow_circe_ex0.pisc  dotarrow_codec_idem_aeson_ex0.pisc  dotarrow_codec_idem_circe_ex0.pisc  dotarrow_codec_list_aeson_ex0.pisc  dotarrow_codec_list_circe_ex0.pisc  dotarrow_stream_circe_ex_3_4.pisc  dotarrow_stream_ex0.pisc  dotarrow_stream_ex1.pisc  dotarrow_stream_ex2.pisc  dotarrow_stream_ex_1_2.pisc
project/: Dependencies.scala
src/main/scala/pisc/: Main.scala  Program.scala
src/main/scala/pisc/generator/: Meta.scala
src/main/scala/pisc/parser/: Calculus.scala  Expression.scala  Pi.scala  package.scala
