cabal-version:      2.4

name:               hs2sc

version:            0.1.0.0

synopsis:

-- description:

homepage:

-- bug-reports:

license:            MIT

license-file:       LICENSE

author:             Sebastian Gliţa-Catina

maintainer:         sjb.ia.ga@gmail.com

category:           Language

extra-doc-files: CHANGELOG.md

executable hs2sc
    main-is:          Main.hs

    other-modules:
        Expr

    build-depends:
        base ^>=4.18,
        bytestring ^>=0.11,
        haskell-src-meta ^>=0.8,
        template-haskell ^>=2.20,
        text ^>=2.0,
        typed-process ^>=0.2,
        hascalam ^>=0.1

    hs-source-dirs:   app

    default-language: GHC2021
