cabal-version:      2.4

name:               sc2hs

version:            0.1.0.0

synopsis:

homepage:

license:            MIT

license-file:       LICENSE

author:             Sebastian Gliţa-Catina

maintainer:         sjb.ia.ga@gmail.com

category:           Language

extra-doc-files: CHANGELOG.md

executable sc2hs
    main-is:          Main.hs

    ghc-options:      -fmax-pmcheck-models=1024

    build-depends:
        base ^>=4.18,
        bytestring ^>=0.11,
        hint ^>=0.9,
        random ^>=1.2,
        template-haskell ^>=2.20,
        typed-process ^>=0.2,
        unliftio ^>=0.2,
        hascalam ^>=0.1

    hs-source-dirs:   app

    default-language: GHC2021
