cabal-version:      2.4

name:               prj

version:            0.1.0.0

synopsis:           prj

license:            MIT

license-file:       LICENSE

executable ex1
    main-is:        Main.hs

    build-depends:
        base ^>=4.18,
        hascalam ^>=0.1

    hs-source-dirs:   app

    default-language: GHC2021
