cabal-version:      2.4

name:               ex3

version:            0.1.0.0

license:            MIT

license-file:       LICENSE

executable ex3
    main-is:        Main.hs

    other-modules:
        Inp_gUgVwYdD8r,
        Out_gUgVwYdD8r

    build-depends:
        base ^>=4.18,
        bytestring ^>=0.11,
        aeson ^>= 2.1,
        aeson-pretty ^>= 0.8,
        template-haskell ^>=2.20

    hs-source-dirs:   app

    default-language: GHC2021
